# objectDetector

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: vision_config.yaml
src/: __init__.py  object_detection.py  vision.py  yaml_parser.py
tools/: __init__.py  bg.txt  haar_ball.py  info.lst  positives.vec  urls.txt
tools/data/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage20.xml  stage21.xml  stage22.xml  stage23.xml  stage24.xml  stage25.xml  stage26.xml  stage27.xml  stage28.xml  stage29.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
